# rtop

./: .pre-commit-config.yaml  Cargo.toml  README.md  compile.sh  install.ps1  install.sh
.cargo/: config.toml
src/: app.rs  cpu.rs  get_sys_info.rs  main.rs  memory.rs  tui.rs  types.rs  utils.rs
src/components/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  theme.rs
src/components/theme/: ayu.rs  catppuccin.rs  default.rs  dracula.rs  everforest.rs  flatremix.rs  github.rs  grayscale.rs  gruvbox.rs  horizon.rs  kanagawa.rs  matcha.rs  mod.rs  monokai.rs  nightowl.rs  onedark.rs  paper.rs  rosepine.rs  solarized.rs  theme.rs  tokyo.rs  types.rs
src/components/themes/: ayu.rs  catppuccin.rs  default.rs  dracula.rs  everforest.rs  flatremix.rs  github.rs  grayscale.rs  gruvbox.rs  horizon.rs  kanagawa.rs  matcha.rs  mod.rs  monokai.rs  nightowl.rs  onedark.rs  paper.rs  rosepine.rs  solarized.rs  tokyo.rs
