[package]
name = "rtop"
version = "0.1.0"
edition = "2021"
authors = ["Goh Yu Han <gohyuhan123456@gmail.com>"]

description = "A lightweight, terminal-based system monitoring tool built in Rust, inspired by top and btop."
license = "MIT"
repository = "https://github.com/gohyuhan/rtop"

[dependencies]
sysinfo = { version = "0.33.1", default-features = false, features = [
    "component",
    "disk",
    "network",
    "system",
    "user",
    "linux-netdevs",
    "linux-tmpfs",
    "windows"
] }
battery = "0.7.8"
ratatui = "0.29.0"
chrono = "0.4.40"
libc = "0.2.171"


[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libproc = "0.14.10"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["psapi", "minwindef"] }
