[package]
name = "rtop"
version = "0.3.0"
edition = "2021"
authors = ["Goh Yu Han <gohyuhan123456@gmail.com>"]

description = "A lightweight, terminal-based system monitoring tool built in Rust, inspired by top and btop."
license = "MIT"
repository = "https://github.com/Bored-UI/rtop"

[dependencies]
sysinfo = { version = "0.34.2", default-features = false, features = [
    "component",
    "disk",
    "network",
    "system",
    "user",
    "linux-netdevs",
    "linux-tmpfs",
    "windows"
] }
ratatui = "0.29.0"
chrono = "0.4.40"
libc = "0.2.172"
serde_json = "1.0.140"
serde = {version = "1.0.219", features=["derive"]}
inquire = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libproc = "0.14.10"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["psapi", "minwindef", "tlhelp32"] }
